# wikify-repo

./: .gitignore  CLAUDE.md  LICENSE  README.md  SCHEMA.md  pyproject.toml
.agents/skills/wikify-ingest-repo/: SKILL.md
.agents/skills/wikify-ingest-repo/prompts/: ingest-docs.md  overview.md  synthesis.md
.claude/skills/: wikify-ingest-repo
config/: defaults.md  jax.md  pytorch.md  torch_tpu.md  torchtitan.md  torchtitan_public.md  xla.md
docs/: design.md  implementation.md
scripts/: bazel_compile_commands.py  install-skill.sh  setup-vendor.sh
skills/prompts/: ingest-docs.md  synthesis.md
skills/wikify-ingest-repo/: SKILL.md
tests/: test_acquire_submodule.py  test_ast_fallback.py  test_bazel_cc.py  test_callers_callees.py  test_config.py  test_coverage.py  test_cpp_ingestion.py  test_devirt_subgraph.py  test_discover.py  test_doc_concepts.py  test_fix.py  test_lint.py  test_sharded_index.py  test_slug.py  test_state.py  test_verify.py
tests/fixtures/callgraph/: mathlib.py
tests/fixtures/cpp_callgraph/: compile_commands.json  cpp.scip  main.cpp  mathlib.cpp  mathlib.h
tests/golden/: torchtitan.md
tools/: render_wiki.py
wikify/: __init__.py  acquire.py  assemble.py  ast_fallback.py  bazel_cc.py  cli.py  config.py  coverage.py  diff.py  discover.py  evidence.py  fix.py  graph.py  lint.py  monikers.py  packet.py  scip_index.py  slug.py  source.py  state.py  verify.py
